--- a/Final/css/index.css
+++ b/Final/css/index.css
@@ -10,7 +10,7 @@ body{
 
 
 .logo{
-	width: 25%; 
+	width: 20%; 
 	margin-top: 30px; 
 	margin-left: 30px;
 	float: left;
@@ -27,19 +27,18 @@ li{
 	text-transform: uppercase;
 	color: white; 
 	margin: 10px;
-	font-family: verdana, sans-serif;
 	font-size: 15px; 
 	position: relative;
 	top: 56px; 
-	left: 120px; 
-	font-family: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif;
+	left: 320px; 
+	font-family: 'Open Sans', sans-serif;
 }
 a:link{
-	color: white; 
+	color: #ffffff; 
 	text-decoration: none; 
 }
 a:hover{
-	color: #e27866;
+	color: #000000;
 	cursor: pointer; 
 }
 
@@ -50,7 +49,7 @@ a:visited{
 .maintext{
 	text-align: center; 
 	color: white; 
-	font-family: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	height: 160px; 
 }	
 
@@ -74,12 +73,12 @@ h1{
 
 .textbox100{
 	text-align: center; 
-	font-family: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif;
-	padding: 20px 0px 20px 0px; 
+	font-family: 'Open Sans', sans-serif;
+	padding: 30px 0px 30px 0px; 
 }
 
 .empty-space{
-	height: 210px; 
+	height: 200px; 
 	width: 1000px; 
 }
 	
@@ -89,7 +88,7 @@ h1{
 
 footer{ 
 	border-top: 2px solid #e3e3e5;
-	font-family: Arial, Verdana, serif; 
+	font-family: 'Open Sans', sans-serif;
 	font-size: 10px; 
 	text-align: center; 
 	height: 100px; 
