--- a/Final/css/index.css
+++ b/Final/css/index.css
@@ -10,7 +10,7 @@ body{
 
 
 .logo{
-	width: 20%; 
+	width: 25%; 
 	margin-top: 30px; 
 	margin-left: 30px;
 	float: left;
@@ -25,20 +25,21 @@ ul{
 li{ 
 	float:left;
 	text-transform: uppercase;
-	color: white; 
+	color: black; 
 	margin: 10px;
+	font-family: verdana, sans-serif;
 	font-size: 15px; 
 	position: relative;
 	top: 56px; 
-	left: 320px; 
-	font-family: 'Open Sans', sans-serif;
+	left: 120px; 
+	font-family: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif;
 }
 a:link{
-	color: #ffffff; 
+	color: black; 
 	text-decoration: none; 
 }
 a:hover{
-	color: #000000;
+	color: white;
 	cursor: pointer; 
 }
 
@@ -49,7 +50,7 @@ a:visited{
 .maintext{
 	text-align: center; 
 	color: white; 
-	font-family: 'Open Sans', sans-serif;
+	font-family: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif;
 	height: 160px; 
 }	
 
@@ -73,12 +74,12 @@ h1{
 
 .textbox100{
 	text-align: center; 
-	font-family: 'Open Sans', sans-serif;
-	padding: 30px 0px 30px 0px; 
+	font-family: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif;
+	padding: 20px 0px 20px 0px; 
 }
 
 .empty-space{
-	height: 200px; 
+	height: 210px; 
 	width: 1000px; 
 }
 	
@@ -88,7 +89,7 @@ h1{
 
 footer{ 
 	border-top: 2px solid #e3e3e5;
-	font-family: 'Open Sans', sans-serif;
+	font-family: Arial, Verdana, serif; 
 	font-size: 10px; 
 	text-align: center; 
 	height: 100px; 
@@ -102,7 +103,3 @@ footer{
 	display: inline;
 	text-align: center; 
 	}
-	
-
-
-	
